--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "joi-browser": "^13.4.0",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
